<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MenuTestActivity!</string>
    <string name="app_name">Aloha</string>
    <string name="select_account">Select Account</string>
    <string name="custom_account">Custom Account</string>
    <string name="select_account_info">Please select an account</string>
    
    <string name="cisco">Cisco Jabber</string>
    <string name="gtalk">GTalk</string>
    <string name="weibo">Sina Weibo</string>
    <string name="renren">RenRen</string>
    
    <string name="input_account_info">Please input the username and password.</string>
    <string name="username">Account Name</string>
	<string name="password">Password</string>
	<string name="server">Server address</string>
	<string name="advanced">Advanced Setting</string>
	<string name="port">Port:</string>
	<string name="default_port">5222</string>
	<string name="ssl">Need SSL</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="delete">Delete</string>
	<string name="presence">Presence</string>
	<string name="account">Account</string>
	
	<string name="signing_in">Signing in ...</string>
	
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="accounts">ACCOUNT</string>
    <string name="create_new_account">Create a New Account . . .</string>
    
    <string name="empty_contact_info">No Contacts. Add contact to start chat.</string>
    <string name="search">Search</string>
    <string name="add_contact">Add Contact</string>
    <string name="start_groupchat">Start a GroupChat</string>
    <string name="empty_chat_info">No Chats.</string>
    
    <string-array name="presence_status_array">
        <item >Available</item>
        <item >Away</item>
        <item >Do not disturb</item>
        <item >Unavailable</item>
    </string-array>
    
    <string-array name="chat_list_operation">
        <item >Set as Top</item>
        <item >Delete</item>
    </string-array>
    
    <string name="general">General</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="show_offline_contact">Show Offline Contact</string>
    <string name="show_in_statusbar">Show in Statusbar</string>
    <string name="bootstart">Boot Start</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="sendemail">Send Email to Author</string>
</resources>