<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/general" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="sound"
            android:title="@string/sound" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="vibrate"
            android:title="@string/vibrate" />
        <SwitchPreference 
            android:defaultValue="true"
            android:key="show_offline_contact"
            android:title="@string/show_offline_contact"
            />
        <SwitchPreference 
            android:defaultValue="true"
            android:key="bootstart"
            android:title="@string/bootstart"
            />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:key="about"
            android:title="@string/app_name" />
        <Preference
            android:key="feedback"
            android:summary="@string/sendemail"
            android:title="@string/feedback" />
    </PreferenceCategory>

</PreferenceScreen>